# RichTools

./: .travis.yml  CMakeLists.txt  INSTALL  NOTES  README.md  richtool
example/: NAJ-buckle.xyz  NAJ.xyz  clp25.xyz  cluster0.xyz  cluster1.xyz  fXrf3GP.xyz  fXrfNAJ.xyz  fXrfNAJnH.xyz  fXrfnh3GP.xyz  fullclust.xyz  naj_cent.xyz  p25m.xyz  s_p25.xyz  test_NAJ-noH.xyz  test_NAJ.xyz  test_cluster.xyz  test_monomer.xyz  test_noh.xyz
retired/: foomain.ppc  main.cc  maptool.bu
src/: cluster.cc  cluster.cc~  cluster.hh  cluster.hh~  distg.m~  gradient.cc  gradient.cc~  gradient.hh  gradient.hh~  iofunc.cc  iofunc.hh  main.cc  main.cc~  maptool.cc  maptool.cc~  quaternion.cc  quaternion.hh  richfit.cc  richfit.cc~  richfit.hh  richfit.hh~  richmap  richmol  richtypes.h  richtypes.h~  simple.cc  simple.cc~  simple.hh  svdmain.cpp  test.xyz  test_dg.m  tree.cc  treeccbu  unordered_align.m
src/mfiles/: distg.m  test_dg.m
